--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
     "name": "myauth"
   , "version": "0.0.1"
+  , "engines": {
+      "node": "0.6.12"
+    , "npm": "1.1.4"
+    }
+  ,
   , "private": true
   , "dependencies": {
       "express": ""
